--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="social-links">
                 <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
-                <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://www.instagram.com/minds.social/" class="instagram" target="_blank"><i class="icofont-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -49,13 +49,13 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
             <h1 class="logo mr-auto">
-                <a href="https://www.linkedin.com/company/mindssocial/"><img src="assets\img\Blue Logo.png" style="padding-right: 10px;"></a>
-                <a href="https://www.linkedin.com/company/mindssocial/">M.I.N.D.S.</a>
+                <a href="https://www.linkedin.com/company/mindssocial/" target="_blank"><img src="assets\img\Blue Logo.png" style="padding-right: 10px;"></a>
+                <a href="https://www.linkedin.com/company/mindssocial/" target="_blank">M.I.N.D.S.</a>
             </h1>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a href="https://linktr.ee/mindssocial">Register</a></li>
+                    <li><a href="https://linktr.ee/mindssocial" target="_blank">Register</a></li>
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Network</a></li>
@@ -75,7 +75,7 @@
             <h1><span>Mentoring Initiative for Networking and Development of Students</spa></h1>
       <h2>India's first not-for-profit social impact network, for the students; by the students</h2>
       <div class="d-flex">
-        <a href="https://linktr.ee/mindssocial" class="btn-get-started scrollto">Register</a>
+        <a href="https://linktr.ee/mindssocial"  target="_blank" class="btn-get-started scrollto">Register</a>
       </div>
     </div>
   </section>
@@ -172,7 +172,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bxs-user-voice"></i></div>
-                        <h4><a href="http://bit.ly/MINDSMentor">Mentors</a></h4>
+                        <h4><a href="http://bit.ly/MINDSMentor" target="_blank">Mentors</a></h4>
                         <p>The backbone of the network, driving transfer of knowledge to the members of the commumity.</p>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bxs-user-detail"></i></div>
-                        <h4><a href="http://bit.ly/MINDSMentee">Mentees</a></h4>
+                        <h4><a href="http://bit.ly/MINDSMentee" target="_blank">Mentees</a></h4>
                         <p>Join to become the receivers of constant guidance and a truckload of opportunities to develop and grow, personally and professionally.</p>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-group"></i></div>
-                        <h4><a href="http://bit.ly/MINDSVolunteer">Volunteers</a></h4>
+                        <h4><a href="http://bit.ly/MINDSVolunteer" target="_blank">Volunteers</a></h4>
                         <p>Get ample opportunity to learn, grow and progress and enable both personal and organization's growth.</p>
                     </div>
                 </div>
@@ -319,7 +319,7 @@
                     <div class="info-box  mb-4">
                         <i class="bx bx-envelope"></i>
                         <!-- <h3>Email Us</h3> -->
-                        <p><a href="mailto:networkingwithminds@gmail.com" style="color: black;">networkingwithminds@gmail.com</a></p>
+                        <p><a href="mailto:networkingwithminds@gmail.com" target="_blank" style="color: black;">networkingwithminds@gmail.com</a></p>
                     </div>
                 </div>
 
@@ -400,8 +400,8 @@
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <div class="social-links mt-3">
-                            <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                            <a href="https://www.linkedin.com/company/mindssocial/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="https://www.instagram.com/minds.social/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                         </div>
                     </div>
 
@@ -414,7 +414,7 @@
                 &copy; Copyright <strong><span>MINDS</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-                Designed by <a href="https://www.linkedin.com/company/mindssocial/">MINDS</a>
+                Designed by <a href="https://www.linkedin.com/company/mindssocial/" target="_blank">MINDS</a>
             </div>
         </div>
     </footer>
