--- a/index.html
+++ b/index.html
@@ -210,16 +210,37 @@
                     <img src="assets/img/testimonials/HINDU.png" class="testimonial-img" alt="">
                     <img src="assets/img/testimonials/DTU.png" class="testimonial-img" alt="">
                     <img src="assets/img/testimonials/STEPHENS.png" class="testimonial-img" alt="">
-                    <img src="assets/img/testimonials/HANSRAJ.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/LSR.jpeg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/KNC.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/XAVIER.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/ANDC.jpg" class="testimonial-img" alt="">
                 </div>
 
                 <div class="testimonial-item row">
+                    <img src="assets/img/testimonials/HANSRAJ.png" class="testimonial-img" alt="">
                     <img src="assets/img/testimonials/SGGSCC.png" class="testimonial-img" alt="">
-                    <img src="assets/img/testimonials/RAMJAS.jpeg" class="testimonial-img" alt="">
-                    <img src="assets/img/testimonials/JMI.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/IIITD.jpg" class="testimonial-img" alt="">
                     <img src="assets/img/testimonials/SBSC.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/SVC.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/IPU.png" class="testimonial-img" alt="">
+                </div>
+
+                <div class="testimonial-item row">
+                    <img src="assets/img/testimonials/IGDTUW.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/RAMJAS.jpeg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/SYMBIOSIS.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/JMC.png" class="testimonial-img" alt="">
                     <img src="assets/img/testimonials/SGTBKC.png" class="testimonial-img" alt="">
                     <img src="assets/img/testimonials/DRC.png" class="testimonial-img" alt="">
+                </div>
+
+                <div class="testimonial-item row">
+                    <img src="assets/img/testimonials/KNC.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/XAVIER.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/ANDC.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/AMITY.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/SATYAWATI.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/RLA.jpg" class="testimonial-img" alt="">
                 </div>
 
             </div>
