--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>Contact Details</h3>
                         <p>
-                            Divjas Sarna <br> Founder <br><br>
+                            <a href="https://www.linkedin.com/in/divjas/" target="_blank" style="color: black;">Divjas Singh</a><br> Founder <br><br>
                             <strong>Phone:</strong> +91 80768 89032<br>
                             <strong>Email:</strong> divjassarna@gmail.com<br>
                         </p>
@@ -400,7 +400,7 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3><br></h3>
                         <p>
-                            Satwik Dudeja <br> Co-Founder <br><br>
+                            <a href="https://www.linkedin.com/in/satwik-dudeja-374896192/" target="_blank" style="color: black;">Satwik Dudeja</a> <br> Co-Founder <br><br>
                             <strong>Phone:</strong> +91 96500 86966<br>
                             <strong>Email:</strong> satwikdudeja@gmail.com<br>
                         </p>
@@ -409,7 +409,7 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3><br></h3>
                         <p>
-                            Praneet Sawhney <br> Vice-President <br><br>
+                            <a href="https://www.linkedin.com/in/praneet-sawhney/" target="_blank" style="color: black;">Praneet Sawhney</a> <br> Vice-President <br><br>
                             <strong>Phone:</strong> +91 76786 54450<br>
                             <strong>Email:</strong> sawhneypraneet@gmail.com<br>
                         </p>
