section-bg changed

--- a/index.html
+++ b/index.html
@@ -82,81 +82,81 @@
   <!-- End Hero -->
 
   <main id="main">
-
-    <!-- ======= Perks Section ======= -->
-    <section id="featured-services" class="featured-services">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-            <h2>Perks</h2>
-            <h3>Why <span>M.I.N.D.S.?</span></h3>
-                <p></p>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><i class="bx bx-network-chart"></i></div>
-                    <h4 class="title"><a href="">Networking</a></h4>
-                    <p class="description">Expand personal network and leverage M.I.N.D.S.' reach to accelerate your career journey.</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                    <div class="icon"><i class="bx bx-file"></i></div>
-                    <h4 class="title"><a href="">Skill Development</a></h4>
-                    <p class="description">Encouraging a systematic flow of skills, knowledge and experience within the community.</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                    <div class="icon"><i class="bx bx-rupee"></i></div>
-                    <h4 class="title">
-                        <a href="">Cost-Free Association</a>
-                    </h4>
-                    <p class="description">As a social impact network, our sole motive is to work for students welfare with no attached economic motive.</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                    <div class="icon"><i class="bx bxs-component"></i></div>
-                    <h4 class="title"><a href="">Distinct Features</a></h4>
-                    <p class="description">A continuous learning avenue, cutting across different subjects and domains to provide quality mentorship.</p>
-                </div>
-            </div>
-
-        </div>
-
-        </div>
-    </section>
-    <!-- End Perks Section -->
-
+    
     <!-- ======= About Section ======= -->
-    <section id="about" class="about section-bg">
+    <section id="about" class="about">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
                 <h2>About</h2>
                 <h3>What is <span>M.I.N.D.S.?</span></h3>
                 <p></p>
-            </div>
+        </div>
 
-            <div class="row justify-content-center align-items-center">
-                <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <p style="font-size: 18px;">M.I.N.D.S., a not for profit social endeavor, has been created with the thought of giving back to the student community. It is an attempt to create a social impact network that works on the grounds of mutual benefits.<br></p>
-                    <p style="font-size: 4px;"><br></p>
-                </div>
-                <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <p style="font-size: 18px;">Having known the value of guidance and mentorship, we wish to make correct mentorship easily accessible to all and allow them to fly high in their desired fields. For this, we aim to create a strong and effective mentor-mentee network
-                        that caters to different fields of study.</p>
-                </div>
+        <div class="row justify-content-center align-items-center">
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                <p style="font-size: 18px;">M.I.N.D.S., a not for profit social endeavor, has been created with the thought of giving back to the student community. It is an attempt to create a social impact network that works on the grounds of mutual benefits.<br></p>
+                <p style="font-size: 4px;"><br></p>
             </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                <p style="font-size: 18px;">Having known the value of guidance and mentorship, we wish to make correct mentorship easily accessible to all and allow them to fly high in their desired fields. For this, we aim to create a strong and effective mentor-mentee network
+                    that caters to different fields of study.</p>
+            </div>
+        </div>
 
         </div>
     </section>
     <!-- End About Section -->
+
+    <!-- ======= Perks Section ======= -->
+    <section id="featured-services" class="featured-services section-bg">
+        <div class="container" data-aos="fade-up">
+            <div class="section-title">
+                <h2>Perks</h2>
+                <h3>Why <span>M.I.N.D.S.?</span></h3>
+                <p></p>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                    <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <div class="icon"><i class="bx bx-network-chart"></i></div>
+                        <h4 class="title"><a href="">Networking</a></h4>
+                        <p class="description">Expand personal network and leverage M.I.N.D.S.' reach to accelerate your career journey.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                    <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+                        <div class="icon"><i class="bx bx-file"></i></div>
+                        <h4 class="title"><a href="">Skill Development</a></h4>
+                        <p class="description">Encouraging a systematic flow of skills, knowledge and experience within the community.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                    <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
+                        <div class="icon"><i class="bx bx-rupee"></i></div>
+                        <h4 class="title">
+                            <a href="">Cost-Free Association</a>
+                        </h4>
+                        <p class="description">As a social impact network, our sole motive is to work for students welfare with no attached economic motive.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                    <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+                        <div class="icon"><i class="bx bxs-component"></i></div>
+                        <h4 class="title"><a href="">Distinct Features</a></h4>
+                        <p class="description">A continuous learning avenue, cutting across different subjects and domains to provide quality mentorship.</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <!-- End Perks Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -369,10 +369,11 @@
                             <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
-                        <div class="text-center"><button type="submit">Send Message</button></div>
+                        <div class="text-center">
+                            <button type="submit">Send Message</button>
+                        </div>
                     </form>
                 </div>
-
             </div>
 
         </div>
