home button repair

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                     <li><a href="https://linktr.ee/mindssocial" target="_blank">Register</a></li>
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Network</a></li>
                     <li><a href="#faq">FAQs</a></li>
@@ -96,7 +96,7 @@
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                 <p style="font-size: 18px;">M.I.N.D.S., a not for profit social endeavor, has been created with the thought of giving back to the student community. It is an attempt to create a social impact network that works on the grounds of mutual benefits.<br></p>
-                <p style="font-size: 4px;"><br></p>
+                <p style="font-size: 3px;"><br></p>
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                 <p style="font-size: 18px;">Having known the value of guidance and mentorship, we wish to make correct mentorship easily accessible to all and allow them to fly high in their desired fields. For this, we aim to create a strong and effective mentor-mentee network
