--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a href="https://linktr.ee/mindssocial" target="_blank">Register</a></li>
+                    <!-- <li><a href="https://linktr.ee/mindssocial" target="_blank">Register</a></li> -->
                     <li class="active"><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Network</a></li>
                     <li><a href="#faq">FAQs</a></li>
+                    <li class="drop-down"><a href="#header">Join</a>
+                        <ul>
+                            <li><a href="mentor.html">Mentor</a></li>
+                            <li><a href="mentee.html">Mentee</a></li>
+                            <li><a href="volunteer.html">Volunteer</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#contact">Contact</a></li>
 
                 </ul>
@@ -121,7 +128,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                         <div class="icon"><i class="bx bx-network-chart"></i></div>
-                        <h4 class="title"><a href="">Networking</a></h4>
+                        <h4 class="title">Networking</h4>
                         <p class="description">Expand personal network and leverage M.I.N.D.S.' reach to accelerate your career journey.</p>
                     </div>
                 </div>
@@ -129,7 +136,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                         <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4 class="title"><a href="">Skill Development</a></h4>
+                        <h4 class="title">Skill Development</h4>
                         <p class="description">Encouraging a systematic flow of skills, knowledge and experience within the community.</p>
                     </div>
                 </div>
@@ -137,9 +144,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                         <div class="icon"><i class="bx bx-rupee"></i></div>
-                        <h4 class="title">
-                            <a href="">Cost-Free Association</a>
-                        </h4>
+                        <h4 class="title">Cost-Free Association</h4>
                         <p class="description">As a social impact network, our sole motive is to work for students welfare with no attached economic motive.</p>
                     </div>
                 </div>
@@ -147,7 +152,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
                         <div class="icon"><i class="bx bxs-component"></i></div>
-                        <h4 class="title"><a href="">Distinct Features</a></h4>
+                        <h4 class="title">Distinct Features</h4>
                         <p class="description">A continuous learning avenue, cutting across different subjects and domains to provide quality mentorship.</p>
                     </div>
                 </div>
@@ -320,6 +325,24 @@
         </div>
     </section>
     <!-- End Frequently Asked Questions Section -->
+
+    <!-- ======= Forms Section ======= -->
+    <!-- <section id="featured-services" class="featured-services">
+        <div class="container" data-aos="fade-up">
+            <div class="section-title">
+                <h2>Forms</h2>
+                <h3>Get <span>Started</span></h3>
+                <p></p>
+            </div>
+
+            <div class="row align-items-center">
+                <div><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaNpImGwbDusV_7K6KdNMeDt5n1aWjexb6LEKXb4cib5pO8g/viewform?embedded=true" width="570" height="570" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+                <div><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdU8iSyL_CWIR9JZmN8PkHd_Fq-REthujRdoBg10KgQJToY2Q/viewform?embedded=true" width="570" height="570" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+            </div>
+
+        </div>
+    </section> -->
+    <!-- End Forms Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
