Reverted form changes

--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <!-- <li><a href="https://linktr.ee/mindssocial" target="_blank">Register</a></li> -->
+                    <li><a href="https://linktr.ee/mindssocial" target="_blank">Register</a></li>
                     <li class="active"><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Network</a></li>
                     <li><a href="#faq">FAQs</a></li>
-                    <li class="drop-down"><a href="#header">Join</a>
+                    <!-- <li class="drop-down"><a href="#header">Join</a>
                         <ul>
                             <li><a href="mentor.html">Mentor</a></li>
                             <li><a href="mentee.html">Mentee</a></li>
                             <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li><a href="#contact">Contact</a></li>
 
                 </ul>
