--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
             <div class="row">
                 <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
-                    <img src="assets/img/Collaboration.png" class="img-fluid" alt="" style="height: 410px; width: 410px; border-radius: 30px;">
+                    <img src="assets/img/Collaboration.png" class="img-fluid" alt="" style="height: 400px; width: 400px; border-radius: 30px;">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                     <h3>Crowdsourced for free by a growing team of students for your convenience!</h3>
@@ -287,7 +287,7 @@
                             </div>
                         </li>
                     </ul>
-                    <p>
+                    <p style="font-size: 15px;">
                         This initiative with The OBE Collective is an attempt to ensure there’s a level-playing field for everyone. We want to ensure that every student can access good-quality study material and guidance, for it shouldn’t be a privilege but a fundamental right.
                     </p>
                 </div>
