--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
                     <img src="assets/img/Collaboration.png" class="img-fluid" alt="" style="height: 400px; width: 400px; border-radius: 30px;">
                 </div>
-                <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-6 pt-4 pt-lg-0 content flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                     <h3>Crowdsourced for free by a growing team of students for your convenience!</h3>
                     <!-- <p class="font-italic">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
