--- a/index.html
+++ b/index.html
@@ -203,6 +203,51 @@
     </section>
     <!-- End Services Section -->
 
+    <!-- ======= Collaborations Section ======= -->
+    <section id="collaborations" class="about section-bg">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>Collaborations</h2>
+                <h3 style="color: #f5c71a"><span>M.I.N.D.S. x </span>The OBE Collective</h3>
+                <p>M.I.N.D.S. is proud to announce its collaboration with The OBE Collective, providing access to standardized resources for the students</p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
+                    <img src="assets/img/Collaboration.png" class="img-fluid" alt="" style="height: 400px; width: 400px; border-radius: 30px;">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                    <h3>Crowdsourced for free by a growing team of students for your convenience!</h3>
+                    <!-- <p class="font-italic">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p> -->
+                    <ul>
+                        <li>
+                            <a href="https://www.theobecollective.com/" target="_blank" class="instagram"><i class="bx bxl-dribbble"></i></a>
+                            <div>
+                                <h5>Free Study Material</h5>
+                                <p>Download free study guides, summaries, exams, lecture notes, assignments, solutions, and much more!</p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/company/the-obe-collective/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <div>
+                                <h5>Get Guidelines</h5>
+                                <p>Get guidelines and tips by seniors who have attempted the OBE exams in the past.</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <p style="font-size: 15px;">
+                        This initiative with The OBE Collective is an attempt to ensure there’s a level-playing field for everyone. We want to ensure that every student can access good-quality study material and guidance, for it shouldn’t be a privilege but a fundamental right.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- End Collaborations Section -->
+
     <!-- ======= Background Section ======= -->
     <section id="testimonials" class="testimonials">
         <div class="container" data-aos="zoom-in">
@@ -252,53 +297,8 @@
     </section>
     <!-- End Background Section -->
 
-    <!-- ======= Collaborations Section ======= -->
-    <section id="collaborations" class="about">
-        <div class="container" data-aos="fade-up">
-
-            <div class="section-title">
-                <h2>Collaborations</h2>
-                <h3 style="color: #f5c71a"><span>M.I.N.D.S. x </span>The OBE Collective</h3>
-                <p>M.I.N.D.S. is proud to announce its collaboration with The OBE Collective, providing access to standardized resources for the students</p>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
-                    <img src="assets/img/Collaboration.png" class="img-fluid" alt="" style="height: 400px; width: 400px; border-radius: 30px;">
-                </div>
-                <div class="col-lg-6 pt-4 pt-lg-0 content flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <h3>Crowdsourced for free by a growing team of students for your convenience!</h3>
-                    <!-- <p class="font-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p> -->
-                    <ul>
-                        <li>
-                            <a href="https://www.theobecollective.com/" target="_blank" class="instagram"><i class="bx bxl-dribbble"></i></a>
-                            <div>
-                                <h5>Free Study Material</h5>
-                                <p>Download free study guides, summaries, exams, lecture notes, assignments, solutions, and much more!</p>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/company/the-obe-collective/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            <div>
-                                <h5>Get Guidelines</h5>
-                                <p>Get guidelines and tips by seniors who have attempted the OBE exams in the past.</p>
-                            </div>
-                        </li>
-                    </ul>
-                    <p style="font-size: 15px;">
-                        This initiative with The OBE Collective is an attempt to ensure there’s a level-playing field for everyone. We want to ensure that every student can access good-quality study material and guidance, for it shouldn’t be a privilege but a fundamental right.
-                    </p>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <!-- End Collaborations Section -->
-
     <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq section-bg">
+    <section id="faq" class="faq">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -390,7 +390,7 @@
     <!-- End Forms Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact section-bg">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
