OBE Webpage Added

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             <div class="section-title">
                 <h2>Collaborations</h2>
-                <h3 style="color: #f5c71a"><span>M.I.N.D.S. x </span>The OBE Collective</h3>
+               <a href="obepage.html" target="_blank"> <h3 style="color: #f5c71a"><span>M.I.N.D.S. x </span>The OBE Collective</h3></a>
                 <p>M.I.N.D.S. is proud to announce its collaboration with The OBE Collective, providing access to standardized resources for the students</p>
             </div>
 
