updated OBE webpage

--- a/obepage.html
+++ b/obepage.html
@@ -49,6 +49,26 @@
     margin-right: 15px;
     }
 
+    .contributor {
+        padding: 10px;
+    background: #fff;
+    font-size: 12px;
+    margin-right: 15px;
+
+    }
+    .contributor p{
+        padding-top:8px;
+        text-align: center;
+        font-size:18px;
+    }
+
+    #whyOBE{
+        font-size:20px;
+        letter-spacing:1.5px;
+        text-align: center;
+        word-spacing:1.3px;
+    }
+
     </style>
 
 </head>
@@ -75,7 +95,7 @@
             <!-- <h1 class="logo mr-auto"> -->
                 <!-- a href="https://www.linkedin.com/company/mindssocial/" target="_blank"><img src="https://d33wubrfki0l68.cloudfront.net/fde00b2488cc4247ae13b3b4c4ef1857bbf14ad1/3cd3e/assets/img/collaboration.png" style="padding-right: 10px;"></a>
                 <a href="https://www.linkedin.com/company/mindssocial/" target="_blank">M.I.N.D.S.</a> -->
-                <h3 style="color: #f5c71a"><span>M.I.N.D.S. x </span>The OBE Collective</h3>
+                <h3 style="color: #f5c71a">The OBE Collective <span> by M.I.N.D.S. </span></h3>
                 <h2 style="margin-top:13px"><a href="https://www.theobecollective.com/"  target="_blank" class="btn-get-started scrollto">www.obecollective.com</a></h2>
                 <!-- <a href="https://www.theobecollective.com/"  target="_blank" class="btn-get-started scrollto">VISIT: OBE Collective</a> -->
         </div>
@@ -114,14 +134,16 @@
                         <li>
                             <a href="https://www.linkedin.com/company/the-obe-collective/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                             <div>
-                                <h5>Get Guidelines</h5>
-                                <p>Get guidelines and tips by seniors who have attempted the OBE exams in the past.</p>
+                                <h5>Follow recent posts</h5>
+                                <p>Get timely updates on latest developments.</p>
                             </div>
                         </li>
                     </ul>
+                    <p>
                     <h5 style="font-size: 15px;">
                         This initiative with The OBE Collective is an attempt to ensure there’s a level-playing field for everyone. We want to ensure that every student can access good-quality study material and guidance, for it shouldn’t be a privilege but a fundamental right.
                     </h5>
+                </p>
                 </div>
             </div>
 
@@ -129,7 +151,24 @@
     </section>
         <!-- ======= Collaborations Section ends ======= -->
 
-<!-- ======= Services Section ======= -->
+        <!-- ======= Services Section 1 ======= -->
+    <section id="services" class="services">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h3>WHY THE <span> OBE Collective?</span></h3>
+                <p></p>
+            </div>
+
+            <div class="container" id="whyOBE">
+                Owing to Covid, the university exams in 2020 will be virtual and open-book. The grades will be largely dictated by how accessible quality resources are to us. This initiative is an attempt to create a bridge to ensure there’s a level-playing field for everyone. Now, more than ever, it is important that no one is left behind only because of financial constraints. We want to ensure that every student can access good-quality material for it shouldn’t be a privilege but a fundamental right.
+            </div>
+
+        </div>
+    </section>
+    <!-- End Services Section -->
+
+<!-- ======= Services Section 2 ======= -->
     <section id="services" class="services">
         <div class="container" data-aos="fade-up">
 
@@ -142,7 +181,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
                         <!-- <div class="icon"><i class="bx bxs-user-voice"></i></div> -->
-                        <h4><a href="http://bit.ly/MINDSMentor" target="_blank" >Get Guidelines!</a></h4>
+                        <h4><a  >Get Guidelines!</a></h4>
                         <p>Get guidelines and tips by seniors who have attempted the OBE in the past. Get specific and actionable for your courses the kind of exams-theory and practical!</p>
                     </div>
                 </div>
@@ -150,7 +189,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
                         <!-- <div class="icon"><i class="bx bxs-user-detail"></i></div> -->
-                        <h4 style="color: #f5c71a"><a href="http://bit.ly/MINDSMentee" target="_blank">Free Study Material!</a></h4>
+                        <h4 style="color: #f5c71a"><a >Find Resources!</a></h4>
                         <p>Download free study guides, summaries, exams, lecture notes, assignments, solutions and much more! All the documents have been rated by fellow students to maintain excellent quality.</p>
                     </div>
                 </div>
@@ -158,7 +197,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <!-- <div class="icon"><i class="bx bx-group"></i></div> -->
-                        <h4 style="color: #f5c71a"><a href="http://bit.ly/MINDSVolunteer" target="_blank">Get Updates!</a></h4>
+                        <h4 style="color: #f5c71a"><a>Get Updates!</a></h4>
                         <p>No more fake notices and last minute chaos. Get all OBE related official notices and updates from the University of Delhi -explained in easy-to-understand quick bites!</p>
                     </div>
                 </div>
@@ -167,6 +206,8 @@
         </div>
     </section>
     <!-- End Services Section -->
+
+     
 
     <!-- More info about OBE -->
     <section id="collaborations" class="about section-bg">
@@ -211,6 +252,41 @@
     </section>
   <!-- more info ends -->
 
+   <!-- ======= Services Section 3 ======= -->
+    <section id="services" class="services">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h3>BECOME A <span style="color: #f5c71a;letter-spacing:1.2px;"> CONTRIBUTOR!</span></h3>
+                <h2 style="margin-top:13px"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfAjQAhMkIM5D_NY6vVt7CGTX3RZvoJe6sh0PJFn2NvQYNQ3w/viewform"  target="_blank" class="btn-get-started scrollto">FORM LINK</a></h2>
+                <p></p>
+            </div>
+            <div class="col-12 pt-4 pt-lg-0 content flex-column justify-content-center contributor" data-aos="fade-up" data-aos-delay="100">
+            <ul>
+                        <li>
+                            <!-- <a href="https://www.theobecollective.com/" target="_blank" class="instagram"> -->
+                            <div>
+                                <h5>All contributors putting up a new set of notes or books will be recongnised on the website with a picture and biography.</h5>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h5>You will receive a gratitude letter for your contribution!</h5>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                              <h5>It is more than a process of simply sharing notes and books - Your notes will be viewed by thousands of students across DU to learn better and help prepare for exams!</h5>
+                            </div>
+                        </li>
+                    </ul>
+                    <p>
+                    <strong>Eligibility: Recent graduates, 2nd or 3rd year students only.</strong>
+                    </p>
+            </div>
+        </div>
+    </section>
+    <!-- End Services Section -->
 
     <!-- =======lower footer ======= -->
     <footer id="footer">
