--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
         </div>
     </div>
+    <!-- End Top Bar -->
 
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
